--- a/style/shop.css
+++ b/style/shop.css
@@ -17,7 +17,6 @@ body{
     display: flex;
     justify-content: space-between;
     background-color: white;
-    /* padding: 12px; */
 }
 .left{
     display: flex;
@@ -47,54 +46,13 @@ body{
 #active{
     color: rgb(59, 141, 182);
     text-decoration: underline;
-} 
+}
 
 /* main */
-.main-home{
-    height: 90vh;
-    background-image: url(../photo/bg.jpg);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-.text-main {
-    margin-top: 34px;    
-    align-items: center;
-}
-.text-main h1 {
-  font-size: 160px;
-  text-align: center;
-  font-weight: bold;
-  -webkit-text-fill-color: transparent;
-  -webkit-text-stroke: 2px white;
-
-}
-.btn-shop{
-    margin-top: 34px;
-    margin-left: 1270px;
-    background-color:#D2E8A0;
-    border: none;
-    height: 45px;
-    width: 150px;
-    border-radius: 5px;
-}
-.btn-shop a{
-    text-decoration: none;
-    color: black;
-}
-.btn-shop:hover{
-    background:rgb(169, 246, 169);
-}
-section h1{
-    padding: 20px;
-    color: rgb(52, 150, 183);
-    font-size: 35px;
-}
-.top-sell{
-    padding: 30px;
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
+marquee{
+    /* margin-top: 12px; */
+    background-color: rgb(175, 207, 231);
+    padding: 12px;
 }
 .card{
     margin-top: 40px;
@@ -104,6 +62,12 @@ section h1{
     border: 5px solid rgb(149, 191, 217);
     box-shadow: 0 4px 8px rgba(64, 61, 61, 0.2);
     border-radius: 5px;
+}
+.top-sell{
+    padding: 30px;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
 .card img{
     width:300px;
@@ -120,7 +84,7 @@ section h1{
     height:300px;
 }
 .icon-text{
-    padding: 24px  ;
+    padding: 10px 24px  ;
 }
 #image1{
     height: 300px;
@@ -128,8 +92,18 @@ section h1{
 #image6{
     height: 300px;
 }
-
-
+.view a{    
+    text-decoration: none;
+    color: white;
+}
+.view button{
+    padding: 10PX 35PX;
+    margin-left: 90px;
+    margin-bottom: 12px;
+    border: none;
+    border-radius: 8px;
+    background-color: rgb(130, 189, 230); 
+}
 
 /* footer */
 #image-footer{
@@ -151,8 +125,15 @@ section h1{
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
     padding: 35px;
     border-radius: 12px;
-    background: white;
 
+}
+.center{
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+    background: white;
+}
+.end{
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+     background: white;
 }
 .text-footershop {
     width: 100%;
@@ -201,6 +182,4 @@ section h1{
     display: flex;
     gap: 10px;
 }
-
-
 
